# paperscout

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish.yml
paperscout/: __init__.py  cli.py  client.py  download.py  formatter.py  py.typed  search.py  similarity.py  types.py
paperscout/backends/: __init__.py  acl_anthology.py  arxiv.py  base.py  dblp.py  s2cli.py
tests/: __init__.py  test_backends.py  test_client.py  test_search.py  test_similarity.py
